Fixed series hero images getting cut off
Former-commit-id: 697be6c20a56324de06bc2a79d8a3e12e73d52e5

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/pages/home/watch/series.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/pages/home/watch/series.css
@@ -2,12 +2,11 @@
 .page-background {
     background-color: black;
     background-image: var(--page-background);
-    background-size: cover;
+    background-size: contain;
 }
 
 .main-feature {
     padding-top: 100px;
-    margin-bottom: 35px;
 }
 
 .series-header-image {
